--- a/public/500.html
+++ b/public/500.html
@@ -1,66 +1,77 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Traveld - Internal Error</title>
+  <link rel="shortcut icon" type="image/x-icon"
+    href="/assets/favicon-922783abb50620cfcab587da792946b9504ff68978e365703a20ffb043ec007d.png" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Overpass&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" media="all"
+    href="/assets/application-d97db403c6439cdc98b1ba92739f4aba09529330fb4d43d2897d5b34f9a63b8b.css"
+    data-turbolinks-track="reload" />
   <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
+    html {
+      height: 100%;
+    }
 
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
+    body {
+      color: #23786B;
+      text-align: center;
+      height: 100%;
+    }
 
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    .container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      height: 100%;
+    }
 
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
+    h2 {
+      font-size: 72px;
+      color: white;
+      background-color: #23786B;
+      padding: 10px 20px;
+    }
 
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    h3 {
+      font-size: 40px;
+    }
+
+    .button {
+      bottom: 5px;
+      position: fixed;
+      display: flex;
+      align-items: center;
+      justify-content: space-evenly;
+      background-color: #23786B;
+      font-size: 26px;
+      margin: 20px auto;
+      padding: 5px 20px;
+      border-radius: 10px;
+      border: 2px solid white;
+      text-decoration: none;
+      color: white;
+      font-weight: bolder;
+      width: 95%;
+
+    }
   </style>
 </head>
 
-<body class="rails-default-error-page">
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <div>
-      <h1>We're sorry, but something went wrong.</h1>
-    </div>
-    <p>If you are the application owner check the logs for more information.</p>
+<body>
+  <div class="container">
+    <h2>500</h2>
+    <h3>Internal Server Error</h3>
+    <p>Something has gone wrong on the website’s server, we apologize for the inconvenience, please try again shortly to visit this page</p>
+    <a class="button" href="/">Go back to home page</a>
   </div>
 </body>
+
 </html>
