--- a/public/404.html
+++ b/public/404.html
@@ -19,7 +19,7 @@
     height: 100%;
 }
       body {
-        color:#23786B;
+        color:#282828;
         text-align: center;
         height: 100%;
       }
@@ -33,7 +33,7 @@
       h2 {
         font-size: 72px;
         color: white;
-        background-color: #23786B;
+        background-color: #282828;
         padding: 10px 20px;
       }
       h3 {
@@ -45,7 +45,7 @@
         display: flex;
         align-items: center;
         justify-content: space-evenly;
-        background-color: #23786B;
+        background-color: #282828;
         font-size: 26px;
         margin: 20px auto;
         padding: 5px 20px;
