--- a/public/500.html
+++ b/public/500.html
@@ -20,7 +20,7 @@
     }
 
     body {
-      color: #23786B;
+      color: #282828;
       text-align: center;
       height: 100%;
     }
@@ -36,7 +36,7 @@
     h2 {
       font-size: 72px;
       color: white;
-      background-color: #23786B;
+      background-color: #282828;
       padding: 10px 20px;
     }
 
@@ -50,7 +50,7 @@
       display: flex;
       align-items: center;
       justify-content: space-evenly;
-      background-color: #23786B;
+      background-color: #282828;
       font-size: 26px;
       margin: 20px auto;
       padding: 5px 20px;
